{
    "name": "PlayerInputAction",
    "maps": [
        {
            "name": "Player",
            "id": "1fbc4a2d-cffc-4fe9-ac0d-63f78279e558",
            "actions": [
                {
                    "name": "ArrowRotation",
                    "type": "Value",
                    "id": "6b609d48-1563-47ee-9326-73e7daa3818f",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "BallForce",
                    "type": "PassThrough",
                    "id": "db8ccb1a-8105-42ea-b98f-1771f9cc512f",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "BallForceOld",
                    "type": "Button",
                    "id": "da8bb6c9-8fb8-4df5-afa6-9bb83dfed1ef",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "WS Rotate",
                    "id": "ff3134bd-5405-4c75-be83-bb8ec53ac16e",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ArrowRotation",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "Up",
                    "id": "0b90dd81-0051-43d7-a8df-7e52404b70e5",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ArrowRotation",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Down",
                    "id": "976cf8f1-d9dc-40a0-a450-b242ed317b12",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ArrowRotation",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "UPDown Rotate",
                    "id": "7b23f0af-0347-44f1-be56-001a29ab1123",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ArrowRotation",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "Up",
                    "id": "267542bb-e75f-4edb-935d-ea76515312e1",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ArrowRotation",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Down",
                    "id": "7c4e5962-d8b3-41fe-9544-daf06146f25d",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ArrowRotation",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "856b0369-a456-4f21-8d65-215423ef4abf",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ArrowRotation",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cdc15553-bf15-4fb9-b790-07ff00c4e838",
                    "path": "<Keyboard>/space",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "",
                    "action": "BallForce",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b6b114fb-6bb8-4292-ac1d-5aa6989510f1",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BallForce",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "0d0dee66-9647-488d-998e-0a1ce9569f37",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BallForceOld",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "372459a7-84d9-44db-a236-9e0103f076db",
                    "path": "<Mouse>/position/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BallForceOld",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "42207a63-eade-4fc7-8b08-c7b1b215a1cb",
                    "path": "<Mouse>/position/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BallForceOld",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}